# DocumentSearchEngine

./: CMakeLists.txt  README.md
Keyword_Recommendation/: CMakeLists.txt
Keyword_Recommendation/include/: DictProducer.h  Dictionary.h  SplitTool.h  WordRecommand.h
Keyword_Recommendation/src/: CppJieba.cpp  DictProducer.cpp  Dictionary.cpp  MyRedis.cpp  WordRecommand.cpp  main.cpp
SE_Client/: CMakeLists.txt
SE_Client/frontend/: baidu.html  baiduHome.html  index.html  newsPage.html
SE_Client/include/: ClientConnect.h  InetAddress.h  JsonTrans.h  NonCopyable.h  SE_ClientWeb.h  Socket.h  SocketIO.h  errorCheck.h  log4cpp.h
SE_Client/src/: InetAddress.cpp  SE_ClientWeb.cpp  Socket.cpp  main.cpp  (+1 more)
SE_Server/: CMakeLists.txt
SE_Server/include/SearchEngineHpp/: MyRedis.h  SE_Server.h  SE_WebPageQuery.h  SE_WordRecommand.h  WordDictionary.h  WordDistance.h  log4cpp.h
SE_Server/include/ThreadPool/: Acceptor.h  Condition.h  EventLoop.h  InetAddress.h  JsonTransform.h  MutexLock.h  NonCopyable.h  Socket.h  SocketIO.h  TaskQueue.h  TcpConnection.h  TcpServer.h  Thread.h  ThreadPool.h
SE_Server/src/SearchEngineCpp/: MyRedis.cpp  SE_WebPageQuery.cpp  SE_WordRecommand.cpp  WordDictionary.cpp  WordDistance.cpp  main.cpp  tinyxml2.cpp
SE_Server/src/ThreadPool/: Acceptor.cpp  Condition.cpp  EventLoop.cpp  InetAddress.cpp  MutexLock.cpp  Socket.cpp  SocketIO.cpp  TaskQueue.cpp  TcpConnection.cpp  Thread.cpp  ThreadPool.cpp
WebSearch/: CMakeLists.txt
WebSearch/include/: WebPageLib.h
WebSearch/src/: WebPageLib.cpp  main.cpp  tinyxml2.cpp
WordSearch/: CMakeLists.txt
(+31 files in other folders)
